--- a/web/css/login.css
+++ b/web/css/login.css
@@ -25,7 +25,8 @@ body.login {
 }
 
 .login .card-wrapper {
-	width: 400px;
+	width: 50%;
+        algin: center;
 }
 
 .login .card {
@@ -34,7 +35,7 @@ body.login {
 }
 
 .login .card.fat {
-	padding: 10px;
+	padding: 0px;
 }
 
 .login .card .card-title {
