--- a/web/css/login.css
+++ b/web/css/login.css
@@ -25,8 +25,7 @@ body.login {
 }
 
 .login .card-wrapper {
-	width: 50%;
-        algin: center;
+	width: 400px;
 }
 
 .login .card {
@@ -35,7 +34,7 @@ body.login {
 }
 
 .login .card.fat {
-	padding: 0px;
+	padding: 10px;
 }
 
 .login .card .card-title {
